--- a/site/en/tutorials/quickstart_colab.ipynb
+++ b/site/en/tutorials/quickstart_colab.ipynb
@@ -171,11 +171,11 @@
       "execution_count": 27,
       "metadata": {
         "id": "j51mcrLD4Y2W",
-        "outputId": "0e6923ef-9407-4650-ac21-2a19dcda6b9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        }
+        },
+        "outputId": "0e6923ef-9407-4650-ac21-2a19dcda6b9c"
       },
       "outputs": [
         {
@@ -219,28 +219,28 @@
         "        {\"role\": \"model\", \"parts\": \"Great to meet you. What would you like to know?\"},\n",
         "    ]\n",
         ")\n",
-        "response = chat.send_message(\"I have 5 dogs in my house.\")\n",
+        "response = chat.send_message(\"rtyu\")\n",
         "print(response.text)\n",
-        "response = chat.send_message(\"How many paws are in my house?\")\n",
-        "print(response.text)"
+        "response = chat.send_message(\"testing something\")\n",
+        "print(response.text)\n"
       ],
       "metadata": {
-        "id": "20KmFiJDt4Ud",
-        "outputId": "20a3f335-e7b9-4717-8084-510c763a18e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
-        }
+        },
+        "id": "20KmFiJDt4Ud",
+        "outputId": "fb99345f-9c87-4f8f-8f7d-8e05c9321ecf"
       },
-      "execution_count": 31,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "That's a lot of dogs!  Do you have a favorite breed or are they all mixed breeds?  What are their names?  It must be quite lively at your house!\n",
+            "\"rtyu\" appears to be a random sequence of keys pressed on a keyboard.  Is there anything specific you'd like to do with that sequence, or was it just a test?\n",
             "\n",
-            "With 5 dogs, and each dog having 4 paws, there are 5 * 4 = 20 paws in your house.\n",
+            "Okay, I understand.  Is there anything else I can help you test?  Perhaps you have a specific question or task in mind?\n",
             "\n"
           ]
         }
@@ -264,12 +264,12 @@
         "print(response.text)"
       ],
       "metadata": {
-        "id": "FWjmnorCrM-y",
-        "outputId": "a5456613-ead2-446b-b482-0ff49958b53c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
-        }
+        },
+        "id": "FWjmnorCrM-y",
+        "outputId": "a5456613-ead2-446b-b482-0ff49958b53c"
       },
       "execution_count": 29,
       "outputs": [
